fix slight horizontal scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
 }
 
 
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 
 
